--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "17.9"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "isomorphic-unfetch": "^3.1.0",
+    "node-forge": "^1.3.1",
+    "pem": "^1.14.4",
+    "xml-crypto": "^2.1.3",
+    "xml-js": "^1.6.11",
+    "xmldom": "^0.6.0"
   }
 }
