--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "isomorphic-unfetch": "^3.1.0",
     "node-forge": "^1.3.1",
     "pem": "^1.14.4",
